# rubix

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  COPYING.md  FILESTRUCTURE.md  LICENSE.md  README.md  TODO.md  codecov.yml  pyproject.toml
.firebase/: hosting.YnVpbGQvaHRtbA.cache
.github/ISSUE_TEMPLATE/: bug_report.md  discussion_point.md  (+1 more)
config/: default.yml
doc/: api.rst  conf.py  index.rst
notebooks/: cloudy_lookup.ipynb  compare_filtercurves.ipynb  compare_ssp_grids.ipynb  compare_ssp_ifu.ipynb  compare_ssp_templates.ipynb  compare_stellar_templates.ipynb  cosmology.ipynb  create_rubix_data.ipynb  cue_lookup.ipynb  cue_lookup_particle_range2.ipynb  cue_test_from_start2.ipynb  cue_test_from_strart.ipynb  debug.ipynb  demo.ipynb  demo.yml  dust_emission.ipynb  dust_extinction.ipynb  filter_curves.ipynb  fits_file.ipynb  fits_file_nihao.ipynb  gradient_basics.ipynb  gradient_finite_difference.ipynb  gradient_rubix_adam_optimizer.ipynb  gradient_rubix_map.ipynb  gradient_rubix_pipeline.ipynb  gradient_rubix_pipeline2.ipynb  gradient_rubix_simple_showcase.ipynb  gradient_rubix_simple_showcase_age.ipynb  gradient_rubix_simple_showcase_metallicity.ipynb  gradient_simple_bc.ipynb  gradient_simple_bc_age.ipynb  gradient_simple_bc_age_adamoptimizer.ipynb  gradient_simple_bc_age_fsps.ipynb  gradient_simple_bc_both_adamoptimizer.ipynb  gradient_simple_bc_fsps.ipynb  gradient_simple_bc_metallicity_adamoptimizer.ipynb  pipeline_demo.ipynb  profiling.ipynb  psf.ipynb  read_fits_file.ipynb  (+32 more)
rubix/: __init__.py  _version.py  config.yml  debug.py  logger.py  paths.py  units.py  utils.py
source/: acknowledgments.rst  conf.py  index.rst  installation.rst  license.rst  publications.rst  rubix.telescope.filters.rst  rubix.telescope.rst  rubix.utils.rst
tests/: demo.yml  test_apertures.py  test_cloudy_grid.py  test_config_user.py  test_core_cosmology.py  test_core_data.py  test_core_ifu.py  test_core_lsf.py  test_core_noise.py  test_core_pipeline.py  test_core_psf.py  test_core_rotation.py  test_core_ssp.py  test_core_telescope.py  test_cosmology.py  test_debug.py  test_dust_classes.py  test_dust_extinction.py  test_factory.py  test_galaxy_alignment.py  test_illustris_api.py  test_illustris_handler.py  test_input_handler.py  test_load_rubix.py  test_logger.py  test_nihao_handler.py  test_pipeline.py  test_pynbody_handler.py  test_rotation.py  test_rubix.py  test_spectra_ifu.py  test_ssp_factory.py  test_ssp_fsps.py  test_ssp_grid.py  test_ssp_templates.py  test_telescope_factory.py  test_telescope_filters.py  test_telescope_lsf.py  test_telescope_noise.py  test_telescope_psf.py  (+6 more)
virtual_telescope/: __init__.py
(+104 files in other folders)
