# This section describes the requirements of the build/installation
# process itself. Being able to do this was the original reason to
# introduce pyproject.toml
[build-system]
requires = ["setuptools >=61", "setuptools_scm >=7"]
build-backend = "setuptools.build_meta"

# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for rubix's version
[project]
name = "rubix"
description = "Add short description here"
readme = "README.md"
maintainers = [{ name = "Ufuk Çakır", email = "ufukcakir2001@gmail.com" }]
dynamic = ["version"]
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests",
    "requests-mock",
    "h5py",
    "astropy",
    "scipy",
    "numpy",
    "matplotlib",
    "pyaml",
    "jaxtyping",
    "equinox",
    "jax[cpu]!=0.4.27",
    "jax[cpu]!=0.4.36",
    "interpax",
    "astroquery",
]
[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "nbval",
    "jax[cpu]!=0.4.27",
    "jax[cpu]!=0.4.36",
    "pre-commit",
]
docs = [
    "ipykernel",
    "nbsphinx",
    "nbsphinx-link",
    "sphinx",
    "sphinx_mdinclude",
    "sphinx_rtd_theme",
]

cuda = [
    "jax[cuda]!=0.4.27",
    "jax[cuda]!=0.4.36",]


# The following section contains setuptools-specific configuration
# options. For a full reference of available options, check the overview
# at https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
packages = ["rubix"]

# Configure setuptools_scm, which extracts the version number from
# the version control system. For more information see its documentation:
# https://github.com/pypa/setuptools_scm
[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
write_to = "rubix/_version.py"

# The following is the configuration for the pytest test suite
[tool.pytest.ini_options]
testpaths = ["tests", "notebooks"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]
fail_under = 80


[tool.ruff]
ignore = ["F722"]
